--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,44 +1,12 @@
 <p>
-    <i>( Describe task in general )</i>
+    Build square matrix where sum of all numbers in each row, column and diagonal equals <strong>s</strong>.
+    And this matrix should be builded from domino bones.
 </p>
 
-<p>
-    Sum two passed ints
-</p>
-
-<p style="text-align: center;">
-    <img class="for_info_only" title="example" src="{{MEDIA}}example.png" alt="example" width="392px"/>
-    <img class="for_editor_only" title="example" src="{{MEDIA}}example.png" alt="example" width="380px"/>
-</p>
-
-<p><i>( Explain input and output values )</i></p>
-<p>
-    <strong>Input: </strong> Two arguments. Both are int
-</p>
-
-<p>
-    <strong>Output: </strong> Int. 
-</p>
-
-
-
-<div class="for_info_only">
-    <p><i>( Put some usage examples )</i></p>
-    <p>
-        <strong>Example:</strong>
-    </p>
-    <pre class="brush: python">
-checkio(3, 2) == 5
-checkio(5, 7) == 12
-    </pre>
-</div>
-
-<p class="for_info_only">
-    <strong>How it is used: </strong>
-    <i>(Here you can explain how it can be used in development and what is usage of this.)</i>
-</p>
+<p><i>You get <strong>w</strong> and <strong>s</strong> (width/height of matrix and sum value) to your checkio function</i></p>
 
 <p>
     <strong>Precondition:</strong>
-    <i>Constraints for Input</i>
+    <i>4 <= w <= 6</i>
+    All input values are correct, and matrix can be builded.
 </p>
