--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,12 +1,12 @@
 <p>
     Build square matrix where sum of all numbers in each row, column and diagonal equals <strong>s</strong>.
-    And this matrix should be builded from domino bones.
+    This matrix should be builded from domino bones.
 </p>
 
-<p><i>You get <strong>w</strong> and <strong>s</strong> (width/height of matrix and sum value) to your checkio function</i></p>
+<p>You get <strong>w</strong> and <strong>s</strong> (width/height of matrix and sum value) to your checkio function</p>
 
 <p>
-    <strong>Precondition:</strong>
-    <i>4 <= w <= 6</i>
+    <strong>Precondition:</strong></br>
+    <i>4 <= w <= 6</i></br>
     All input values are correct, and matrix can be builded.
 </p>
