--- a/info/task_description.html
+++ b/info/task_description.html
@@ -9,6 +9,6 @@
 
 <p>
     <strong>Precondition:</strong></br>
-    <i>4 <= w <= 6</i></br>
-    All input values are correct, and matrix can be builded.
+    <i>w in (4, 6)</i></br>
+    All input values are solvable.
 </p>
