--- a/info/task_description.html
+++ b/info/task_description.html
@@ -2,7 +2,7 @@
     Build square matrix <strong>w</strong>&#10005;<strong>w</strong> of integers, where sum of all numbers in each row, column and 
     diagonal equals <strong>s</strong>.
     This matrix should be builded from <a href="http://en.wikipedia.org/wiki/Dominoes">classic domino tiles</a>
-    (from 0 to 6 inclusive on each part of bone, also named double-six set).
+    (from 0 to 6 inclusive on each half of tile, also named double-six set).
 </p>
 
 <p>You get <strong>w</strong> and <strong>s</strong> (width/height of matrix and sum value) to your checkio function</p>
