--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,6 +1,6 @@
 <p>
     Build square matrix <strong>w</strong>&#10005;<strong>w</strong> of integers, where sum of all numbers in each row, column and 
-    diagonal equals <strong>s</strong>.
+    both diagonals equals <strong>s</strong>.
     This matrix should be builded from vertically oriented <a href="http://en.wikipedia.org/wiki/Dominoes">classic domino tiles</a>
     (from 0 to 6 inclusive on each half of tile, also named double-six set).
 </p>
