--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,14 +1,29 @@
 <p>
-    Build square matrix <strong>w</strong>&#10005;<strong>w</strong> of integers, where sum of all numbers in each row, column and 
-    both diagonals equals <strong>s</strong>.
-    This matrix should be builded from vertically oriented <a href="http://en.wikipedia.org/wiki/Dominoes">classic domino tiles</a>
+    Build square matrix <strong>w</strong>&#10005;<strong>w</strong> of integers, where sum of numbers in each row, column and 
+    diagonal equals <strong>s</strong>.
+    This matrix should be builded from unique, vertically oriented <a href="http://en.wikipedia.org/wiki/Dominoes">classic domino tiles</a>
     (from 0 to 6 inclusive on each half of tile, also named double-six set).
 </p>
+<p>
+Here is example for <strong>w</strong> = 4 and <strong>s</strong> = 5
+    <pre>
+     5  5 5 5 5  5
+        _______ 
+     5 |0 0 2 3
+     5 |0 4 1 0
 
+     5 |4 0 0 1
+     5 |1 1 2 1
+    </pre>
+</p>
 <p>You get <strong>w</strong> and <strong>s</strong> (width/height of matrix and sum value) to your checkio function</p>
 
 <p>
     <strong>Precondition:</strong></br>
-    <i>w in (4, 6)</i></br>
+    w in (4, 6)</br>
     All input values are solvable.
+</p>
+<p>
+    <strong>Hint:</strong></br>
+    Your solution should run nearly half a minute on your local pc for thoughest inputs, so don't be afraid.
 </p>
