--- a/info/task_description.html
+++ b/info/task_description.html
@@ -16,7 +16,10 @@ Here is example for <strong>w</strong> = 4 and <strong>s</strong> = 5
      5 |1 1 2 1
     </pre>
 </p>
-<p>You get <strong>w</strong> and <strong>s</strong> (width/height of matrix and sum value) to your checkio function</p>
+<p>
+    You get <strong>w</strong> and <strong>s</strong> (width/height of matrix and sum value) as input to your checkio function and return 
+    matrix (list/tuple of rows (list/tuple)). For above example: ((0, 0, 2, 3), (0, 4, 1, 0), ...)
+</p>
 
 <p>
     <strong>Precondition:</strong></br>
