--- a/info/task_description.html
+++ b/info/task_description.html
@@ -17,14 +17,14 @@ Here is example for <strong>w</strong> = 4 and <strong>s</strong> = 5
     </pre>
 </p>
 <p>
-    You get <strong>w</strong> and <strong>s</strong> (width/height of matrix and sum value) as input to your checkio function and return 
+    You get <strong>w</strong> and <strong>s</strong> (width/height of matrix and sum value) as input to your checkio function and should return 
     matrix (list/tuple of rows (list/tuple)). For above example: ((0, 0, 2, 3), (0, 4, 1, 0), ...)
 </p>
 
 <p>
     <strong>Precondition:</strong></br>
     w in (4, 6)</br>
-    All input values are solvable.
+    All input cases are solvable.
 </p>
 <p>
     <strong>Hint:</strong></br>
