--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,11 +1,11 @@
 <p>
-    Build square matrix <strong>w</strong>&#10005;<strong>w</strong> of integers, where sum of numbers in each row, column and 
-    diagonal equals <strong>s</strong>.
+    Build square matrix <strong>size</strong>&#10005;<strong>size</strong> of integers, where sum of numbers in each row, column and 
+    diagonal equals <strong>number</strong>.
     This matrix should be builded from unique, vertically oriented <a href="http://en.wikipedia.org/wiki/Dominoes">classic domino tiles</a>
     (from 0 to 6 inclusive on each half of tile, also named double-six set).
 </p>
 <p>
-Here is example for <strong>w</strong> = 4 and <strong>s</strong> = 5
+Here is example for <strong>size</strong> = 4 and <strong>number</strong> = 5
     <pre>
      5  5 5 5 5  5
         _______ 
@@ -17,13 +17,13 @@ Here is example for <strong>w</strong> = 4 and <strong>s</strong> = 5
     </pre>
 </p>
 <p>
-    You get <strong>w</strong> and <strong>s</strong> (width/height of matrix and sum value) as input to your checkio function and should return 
+    You get <strong>size</strong> and <strong>number</strong> as input to your checkio function and should return 
     matrix (list/tuple of rows (list/tuple)). For above example: ((0, 0, 2, 3), (0, 4, 1, 0), ...)
 </p>
 
 <p>
     <strong>Precondition:</strong></br>
-    w in (4, 6)</br>
+    size in (4, 6)</br>
     All input cases are solvable.
 </p>
 <p>
