--- a/info/task_description.html
+++ b/info/task_description.html
@@ -61,10 +61,9 @@ checkio([10, 9, 10, 10, 9, 8]) == [10, 9, 10, 10, 9]
 </div>
 <p>
     <strong>How it is used:</strong>
-    This mission will help you to understand how to manipulate arrays,
-    something that is the basis for solving more complex tasks.
-    The concept can be easily generalized for real world tasks.
-    For example: if you need to clarify statistics by removing low frequency elements (noise).
+    This is a constraint satisfaction problem.
+    It's used not only for solving solitaries, but also for planning and resource allocation in city planning,
+    construction and just about everywhere else.
 
 </p>
 
