referee and code

--- a/info/task_description.html
+++ b/info/task_description.html
@@ -68,7 +68,7 @@ checkio([10, 9, 10, 10, 9, 8]) == [10, 9, 10, 10, 9]
 </p>
 
 <p>
-    <strong>Precondition:</strong></br>
-    size in (4, 6)</br>
+    <strong>Precondition:</strong><br>
+    size in (4, 6)<br>
     All input test cases are solvable.
 </p>
