--- a/info/task_description.html
+++ b/info/task_description.html
@@ -53,10 +53,10 @@
 
 <div class="for_info_only">
     <p><strong>Example:</strong></p>
-<pre class="brush: python">checkio([1, 2, 3, 1, 3]) == [1, 3, 1, 3]
-checkio([1, 2, 3, 4, 5]) == []
-checkio([5, 5, 5, 5, 5]) == [5, 5, 5, 5, 5]
-checkio([10, 9, 10, 10, 9, 8]) == [10, 9, 10, 10, 9]
+<pre class="brush: python">checkio(4, 5) == ((0, 0, 2, 3),
+                  (0, 4, 1, 0),
+                  (4, 0, 0, 1),
+                  (1, 1, 2, 1))
 </pre>
 </div>
 <p>
