--- a/info/task_description.html
+++ b/info/task_description.html
@@ -43,7 +43,7 @@
 </p>
 
 <p>
-    The result magic square should be represented as as a list/tuple of lists/tuples with integers.
+    The result magic square should be represented as a list/tuple of lists/tuples with integers.
 </p>
 
 
