--- a/info/task_description.html
+++ b/info/task_description.html
@@ -22,7 +22,7 @@
          width="540px"/>
     <img class="for_editor_only"
          title="double-six"
-         src="{{MEDIA}}non-unique-elements.png"
+         src="{{MEDIA}}double-six.png"
          alt="double-six"
          width="380px"/>
 </p>
