--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,15 +1,15 @@
 <p>
-    When Nikola can not find opponent for <a href="http://en.wikipedia.org/wiki/Dominoes">Domino</a> game,
-    he spread Magic Domino Solitaire.
-    The goal of the solitaire is build a <a href="http://en.wikipedia.org/wiki/Magic_square">Magic square</a> with
-    <a href="http://en.wikipedia.org/wiki/Dominoes#Tiles_and_suits">Double Six</a> domino tiles.
+    When Nikola can not find opponent for a game of <a href="http://en.wikipedia.org/wiki/Dominoes">Dominoes</a>,
+    he spreads them out for a game of Magic Domino Solitaire.
+    The goal of solitaire is to build a <a href="http://en.wikipedia.org/wiki/Magic_square">Magic square</a>
+    with <a href="http://en.wikipedia.org/wiki/Dominoes#Tiles_and_suits">Double Six</a> domino tiles.
 </p>
 
 <p>
     A magic square is an arrangement of distinct integers, in a square grid,
     where the numbers in each row, and in each column, and the numbers in the forward and backward main diagonals,
     all add up to the same number.<br>
-    Domino tiles contains two numbers from 0 (empty) to 6. Tiles are unordered and 1-6 is the same as 6-1.
+    Domino tiles contain two numbers from 0 (empty) to 6. Tiles are unordered and 1-6 is the same as 6-1.
     The double-six set contains 28 unique tiles - all combinations of number pairs.
 </p>
 
@@ -28,7 +28,7 @@
 </p>
 <p>
     You are given a <strong>size</strong> for the magic square and a <strong>number</strong>.
-    You should build a magic square by given <strong>size</strong>
+    You should build a magic square to the given <strong>size</strong>
     so that the sum of the horizontal and vertical diagonals equal the given <strong>number</strong>.
     You can place domino tiles from double-six set only <strong>vertically</strong> and they should be <strong>unique</strong>.
 </p>
@@ -62,8 +62,8 @@
 <p>
     <strong>How it is used:</strong>
     This is a constraint satisfaction problem.
-    It's used not only for solving solitaries, but also for planning and resource allocation in city planning,
-    construction and just about everywhere else.
+    It's used not only for solving games of solitaire, but also for planning and resource allocation in city planning,
+    construction and just about anything else.
 
 </p>
 
