--- a/info/task_short_description.html
+++ b/info/task_short_description.html
@@ -1,1 +1,1 @@
-Add short description
+Legend has it, that the magic dominos open a portal to a dimension where the world is run by people instead of robots.
